2004-06-04  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkTextIndex.c: 
	* generic/tkText.c: 
	* generic/tkTextDisp.c: 
	* doc/text.n: fix to shimmering infinite loop scrolling problem
	in text widget under some rare circumstances (Bug 965398).
	Improved comments and documentation.

	* tests/textDisp.test: corrected rounding from float to int
	in test, fixing occasional failures

	* library/text.tcl: corrected mousewheel bindings for TkAqua

2004-05-29  Joe English  <jenglish@users.sourceforge.net>

	* doc/messageBox.n: Fix minor markup errors (backslash 
	is \e, not \b).

2004-05-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/messageBox.n: Added documentation for the -detail option.
	* tests/msgbox.test: Updated test suite with correct list of options.
	* win/tkWinDialog.c (Tk_MessageBoxObjCmd): Added "support" for the
	-detail option by concatenating it onto the end of the message.

2004-05-24  Jim Ingham  <jingham@apple.com>

	* tkMacOSXDialog.c (Tk_MessageBoxObjCmd): Turn on the -detail
	option for Mac OS X.
	
2004-05-23  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* ChangeLog.2002: Split older ChangeLog entries off into a
	separate file.
	* doc/bindtags.n: Added example.

	* tests/*.test: Many minor fixes aiming towards making the Tk test
	suite have better style.  (A very large fraction of test files
	were modified.)

	* generic/tkVisual.c (Tk_GetVisual): Minor fix for error message.

2004-05-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgbox.tcl (MessageBox): Added TIP#152's -detail option
	for Unix/X11 platforms.  Also shrank the size of the main -message
	text which was grossly large.

2004-05-12  Chengye Mao <chengye.geo@yahoo.com>
        * generic/tkBind.c <HandleEventGenerate>: Modified to fix wish
        crach due to incorrectly generate <Destroy> event. This bug was
        reported in comp.lang.tcl but not logged.

2004-05-07  Chengye Mao <chengye.geo@yahoo.com>