@@ -796,7 +796,7 @@ test select-8.1 {TkSelEventProc procedure} -constraints unixOnly -setup {
 test select-9.1 {SelCvtToX and SelCvtFromX procedures} -setup {
     setup
     setupbg
-} -constraint unixOnly -body {
+} -constraints unixOnly -body {
     set selValue "1024"
     set selInfo ""
     selection handle -selection PRIMARY -format INTEGER -type TEST \
