@@ -1,3 +1,10 @@
+2004-06-04  Don Porter  <dgp@users.sourceforge.net>
+
+	* tests/filebox.test:	A few typo corrections in dkf's recent
+	* tests/frame.test:	style upgrade for the test suite.
+	* tests/select.test:
+	* tests/visual.test:
+
 2004-06-04  Vince Darley  <vincentdarley@users.sourceforge.net>
 
 	* generic/tkTextIndex.c: 
